--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <img id="cube" alt="" >
+        <img id="laughImg" alt="" >
         <h3>Don't laugh Challenge</h3>
         <p id="joke" class="joke"></p>
         <button id="jokeBtn" class="btn">Get Another Joke</button>
